example: fix menu z-index in sample app

--- a/projects/sample-app/src/styles.scss
+++ b/projects/sample-app/src/styles.scss
@@ -18,7 +18,7 @@ body {
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 1000;
   }
 
   .menu-close {
